Deploy/ingress/2.ingress-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress
  labels:
    app: nginx-ingress
spec:
  type: NodePort
  ports:
   - port: 80
        targetPort: 80
        protocol: TCP
        name: http
   - port: 443
        targetPort: 443
        protocol: TCP
        name: https
  selector:
    app: nginx-ingress  #name: nginx-ingress
